feat(pos-price,pos-customer): Enhance promotion redemption and eligibility rule handling
